fix on delete
